@@ -99,6 +99,7 @@ import fr.olympa.zta.loot.crates.CratesManager;
 import fr.olympa.zta.loot.creators.FoodCreator.Food;
 import fr.olympa.zta.loot.packs.PackBlock;
 import fr.olympa.zta.loot.packs.PackCommand;
+import fr.olympa.zta.loot.pickers.PickersManager;
 import fr.olympa.zta.mobs.MobSpawning;
 import fr.olympa.zta.mobs.MobSpawning.SpawnType;
 import fr.olympa.zta.mobs.MobSpawning.SpawnType.SpawningFlag;
@@ -143,6 +144,7 @@ import fr.olympa.zta.weapons.guns.GunType;
 import fr.olympa.zta.weapons.guns.ambiance.SoundAmbiance;
 import fr.olympa.zta.weapons.guns.minigun.MinigunsManager;
 import fr.olympa.zta.weapons.skins.SkinsTrait;
+
 import net.citizensnpcs.api.CitizensAPI;
 import net.citizensnpcs.api.event.CitizensEnableEvent;
 import net.citizensnpcs.api.npc.NPC;
@@ -186,6 +188,7 @@ public class OlympaZTA extends OlympaAPIPlugin implements Listener {
 	public GlassSmashManager glass;
 	public CustomDayDuration customDay;
 	public FluctuatingEconomiesManager economies;
+	public PickersManager pickers;
 
 	public ResourcePackCommand resourcePackCommand;
 
@@ -245,6 +248,12 @@ public class OlympaZTA extends OlympaAPIPlugin implements Listener {
 			}catch (Exception ex) {
 				throw new RuntimeException("Registry failed to load", ex);
 			}
+			
+			try {
+				pickers = new PickersManager();
+			}catch (Exception ex) {
+				throw new RuntimeException("Une erreur est survenue lors du chargement du module de pickers random.");
+			}
 
 			GunType.values();
 			Knife.values();
@@ -259,10 +268,10 @@ public class OlympaZTA extends OlympaAPIPlugin implements Listener {
 			AmmoType.values();
 
 			OlympaGroup.PLAYER.setRuntimePermission("dynmap.*", false);
-			OlympaGroup.ASSISTANT.setRuntimePermission("citizens.*");
+			OlympaGroup.GAMEDESIGNER.setRuntimePermission("citizens.*");
 			OlympaGroup.GAMEDESIGNER.setRuntimePermission("beautyquests.*");
 
-			hub = new HubManager(getConfig().getSerializable("hub", Region.class), getConfig().getLocation("spawn"), getConfig().getList("spawnRegionTypes").stream().map(x -> SpawnType.valueOf((String) x)).collect(Collectors.toList()));
+			hub = new HubManager(getConfig().getSerializable("hub", Region.class), getConfig().getLocation("spawn"), getConfig().getList("spawnRegionTypes").stream().map(x -> SpawnType.valueOf((String) x)).toList());
 			teleportationManager = new TeleportationManagerZTA(this, ZTAPermissions.BYPASS_TELEPORT_WAIT_COMMAND);
 
 			PluginManager pluginManager = getServer().getPluginManager();
